# RAG-on-text-book

./: .gitignore  README.md  eval.sh  main.py  pyproject.toml
src/eval/data/grade_10/dia_ly/: dataset.json  urls.txt
src/eval/data/grade_10/dia_ly_2/: dataset.json  urls.txt
src/eval/data/grade_10/hoa_hoc/: dataset.json  urls.txt
src/eval/data/grade_10/lich_su/: dataset.json  urls.txt
src/eval/data/grade_10/ngu_van/: dataset.json  urls.txt
src/eval/data/grade_10/ngu_van_2/: dataset.json  urls.txt
src/eval/data/grade_10/ngu_van_3/: dataset.json  urls.txt
src/eval/data/grade_10/sinh_hoc/: dataset.json  urls.txt
src/eval/data/grade_10/toan/: dataset.json  urls.txt
src/eval/data/grade_10/toan_2/: urls.txt
src/eval/data/grade_10/vat_ly/: dataset.json  urls.txt
src/eval/eval_pipeline/: multiple_choice_eval.py
src/eval/eval_wrapper/: multiple_choice_wrapper.py
src/eval/evaluator/: __init__.py
src/eval/ingestion_pipeline/: __init__.py
src/eval/llm/: base.py  openai.py
src/eval/pipeline/: __init__.py  base.py
src/eval/scraper/: base.py  scrapfly.py
src/eval/script/: crawl_evaluation_dataset.py  run_mcq_eval.py
src/notebooks/: agentic_rag.ipynb  baseline_rag.ipynb  experimentation.ipynb  starter.ipynb
src/rag/: base_rag.py
src/scripts/: convert_to_markdown.py
src/utils/: common.py  eval.py  parse_config.py
